apps/searxng/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: searxng
spec:
  replicas: 1
  selector:
    matchLabels:
      app: searxng
  template:
    metadata:
      labels:
        app: searxng
    spec:
      containers:
        - name: searxng
          image: ghcr.io/searxng/searxng:2026.5.17-f26e45077
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 128Mi
            limits:
              memory: 256Mi
          volumeMounts:
            - name: config-volume
              mountPath: /etc/searxng
              subPath: searxng
      volumes:
        - name: config-volume
          persistentVolumeClaim:
            claimName: data-pvc
